# durer_renderer

./: .gitignore  Cargo.toml  README.md  notes.txt  rustfmt.toml
.cargo/: config.toml
common/: Cargo.toml
common/src/: lib.rs  vectors.rs
gambetta_rasterizer/: Cargo.toml
gambetta_rasterizer/src/: buffer_canvas.rs  instance.rs  lib.rs  matrix44f.rs  model.rs  projective_camera.rs  texture.rs  vector4f.rs
gambetta_raytracer/: Cargo.toml
gambetta_raytracer/src/: lib.rs
rasterized_scene/: Cargo.toml
rasterized_scene/resources/: cube.ply2  octa-flower.ply2
rasterized_scene/src/: main.rs  ply2.rs
raytraced_spheres/: Cargo.toml
raytraced_spheres/src/: main.rs
resources/: parabola.ply2  statue.ply2  torus.ply2  twirl.ply2
src/: buffer_canvas.rs  instance.rs  main.rs  matrix44f.rs  model.rs  plane.rs  ply2.rs  projective_camera.rs  ray_tracing.rs  rendering.rs  starfield.rs  texture.rs  uv.rs  vector4f.rs  vectors.rs
starfield/: Cargo.toml
starfield/src/: main.rs
test_utils/: Cargo.toml
test_utils/src/: lib.rs
thebennybox_rasterizer/: Cargo.toml
thebennybox_rasterizer/src/: indexed_model.rs  main.rs  matrix4f.rs  obj_model.rs  vector4f.rs
